--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
   -->
   <!-- <base href="/"> -->
 
+  <meta name="description" content="Official site for Knooz - Download the ad-free Islamic app for Quran, Hadith, Azkar, and spiritual resources. No ads, no distractions.">
+  
+  <title>Knooz - Ad-Free Islamic App</title>
+  
+  <!-- Open Graph tags for social media -->
+  <meta property="og:title" content="Knooz - Ad-Free Islamic App">
+  <meta property="og:description" content="Official site for Knooz - Download the ad-free Islamic app for Quran, Hadith, Azkar, and spiritual resources.">
+  <meta property="og:url" content="https://cisco0xf.github.io/knooz_documentation/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Official site for Knooz - Download the ad-free Islamic app for Quran, Hadith, Azkar, and spiritual resources. No ads, no distractions.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
